--- a/JavaUdacityCourse/.project
+++ b/JavaUdacityCourse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaUdacityCourse</name>
+	<name>JavaRefresh</name>
 	<comment></comment>
 	<projects>
 	</projects>
